# ridgeback_manipulation

./: .gitmodules  kuka.rosinstall
ridgeback_7_axis_kinova_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ridgeback_7_axis_kinova_moveit_config/config/: controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ridgeback.srdf
ridgeback_7_axis_kinova_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ridgeback_kinova_moveit_ridgeback_planning_execution.launch  ridgeback_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ridgeback_7_axis_kinova_moveit_config/scripts/: customize_moveit.sh
ridgeback_dual_6_axis_kinova_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ridgeback_dual_6_axis_kinova_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ridgeback.srdf
ridgeback_dual_6_axis_kinova_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ridgeback_kinova_moveit_ridgeback_planning_execution.launch  ridgeback_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ridgeback_dual_6_axis_kinova_moveit_config/scripts/: customize_moveit.sh
ridgeback_franka_bringup/: CMakeLists.txt  package.xml
ridgeback_franka_bringup/config/: default_controllers.yaml
ridgeback_franka_bringup/launch/: franka_control.launch  ridgeback_panda_bringup.launch
ridgeback_franka_description/: CMakeLists.txt
ridgeback_franka_description/scripts/: setup_ridgeback_dual_panda_envar  setup_ridgeback_dual_panda_hand_envar  setup_ridgeback_franka_envvar  setup_ridgeback_panda_envar  setup_ridgeback_panda_hand_envar
ridgeback_franka_description/urdf/: ridgeback_dual_panda_description.urdf.xacro  ridgeback_dual_panda_hand_description.urdf.xacro  ridgeback_franka_description.urdf.xacro  ridgeback_panda_description.urdf.xacro  ridgeback_panda_hams_description.urdf.xacro  ridgeback_panda_hand_description.urdf.xacro
ridgeback_hc10_bringup/: CMakeLists.txt  package.xml
ridgeback_hc10_bringup/launch/: ridgeback_hc10_bringup.launch
ridgeback_hc10_description/: CMakeLists.txt  package.xml
ridgeback_hc10_description/config/: joint_names_hc10.yaml
ridgeback_hc10_description/scripts/: setup_ridgeback_hc10_envar
ridgeback_hc10_description/urdf/: ridgeback_hc10_description.urdf.xacro
ridgeback_iiwa_description/: CMakeLists.txt  package.xml
ridgeback_iiwa_description/scripts/: ridgeback_iiwa_14_envar.sh  setup_ridgeback_iiwa_14_envar  setup_ridgeback_iiwa_7_envar
ridgeback_iiwa_description/urdf/: ridgeback_iiwa_14_description.urdf.xacro  ridgeback_iiwa_7_description.urdf.xacro
ridgeback_kinova_bringup/: CMakeLists.txt  package.xml
ridgeback_kinova_bringup/launch/: kinova_robot.launch  ridgeback_dual_gen3_bringup.launch  ridgeback_dual_jaco_bringup.launch  ridgeback_dual_kinova_bringup.launch  ridgeback_dual_mico_bringup.launch  ridgeback_gen3_bringup.launch  ridgeback_jaco_bringup.launch  ridgeback_kinova_bringup.launch  ridgeback_mico_bringup.launch
ridgeback_kinova_description/: CMakeLists.txt  package.xml
ridgeback_kinova_description/scripts/: ridgeback_dual_j2n6s200_envar.sh  ridgeback_dual_jaco_envar.sh  ridgeback_dual_m1n6s200_envar.sh  ridgeback_dual_mico_envar.sh  ridgeback_j2n7s300_envar.sh  ridgeback_j2s6s300_envar.sh  ridgeback_jaco_envar.sh  ridgeback_m1n6s200_envar.sh  ridgeback_mico_envar.sh  setup_ridgeback_dual_gen3_envar  setup_ridgeback_dual_gen3_robotiq_2f_140_envar  setup_ridgeback_dual_gen3_robotiq_2f_85_envar  setup_ridgeback_dual_j2n6s200_envar  setup_ridgeback_dual_j2n6s300_envar  setup_ridgeback_dual_j2n7s300_envar  setup_ridgeback_dual_j2s6s300_envar  setup_ridgeback_dual_j2s7s300_envar  setup_ridgeback_dual_m1n6s200_envar  setup_ridgeback_dual_m1n6s300_envar  setup_ridgeback_gen3_envar  setup_ridgeback_gen3_robotiq_2f_140_envar  setup_ridgeback_gen3_robotiq_2f_85_envar  setup_ridgeback_j2n6s200_envar  setup_ridgeback_j2n6s300_envar  setup_ridgeback_j2n7s300_envar  setup_ridgeback_j2s6s300_envar  setup_ridgeback_j2s7s300_envar  setup_ridgeback_m1n6s200_envar  setup_ridgeback_m1n6s300_envar
ridgeback_kinova_description/urdf/: ridgeback_dual_gen3_description.urdf.xacro  ridgeback_dual_gen3_robotiq_2f_140_description.urdf.xacro  ridgeback_dual_gen3_robotiq_2f_85_description.urdf.xacro  ridgeback_dual_j2n6s200_description.urdf.xacro  ridgeback_dual_j2n6s300_description.urdf.xacro  ridgeback_dual_j2n7s300_description.urdf.xacro  ridgeback_dual_j2s6s300_description.urdf.xacro  ridgeback_dual_j2s7s300_description.urdf.xacro  ridgeback_dual_jaco_description.urdf.xacro  ridgeback_dual_kinova_description.urdf.xacro  ridgeback_dual_m1n6s200_description.urdf.xacro  ridgeback_dual_m1n6s300_description.urdf.xacro  ridgeback_dual_mico_description.urdf.xacro  ridgeback_gen3_description.urdf.xacro  ridgeback_gen3_robotiq_2f_140_description.urdf.xacro  ridgeback_gen3_robotiq_2f_85_description.urdf.xacro  ridgeback_j2n6s200_description.urdf.xacro  ridgeback_j2n6s300_description.urdf.xacro  ridgeback_j2n7s300_description.urdf.xacro  ridgeback_j2s6s300_description.urdf.xacro  ridgeback_j2s7s300_description.urdf.xacro  ridgeback_jaco_description.urdf.xacro  ridgeback_kinova_description.urdf.xacro  ridgeback_m1n6s200_description.urdf.xacro  ridgeback_m1n6s300_description.urdf.xacro  (+1 more)
ridgeback_manipulation/: CMakeLists.txt  package.xml
ridgeback_manipulation_description/: CMakeLists.txt
ridgeback_ur_bringup/: CMakeLists.txt  package.xml
ridgeback_ur_description/: CMakeLists.txt  package.xml
(+453 files in other folders)
