<?xml version="1.0"?>
<package format="2">
  <name>ridgeback_hc10_description</name>
  <version>0.0.0</version>
  <description>The ridgeback_hc10_description package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>motoman_hc10_support</exec_depend>
  <exec_depend>ridgeback_description</exec_depend>
  
  <export>
  </export>
</package>
