<?xml version="1.0"?>
<package format="2">
  <name>ridgeback_kinova_bringup</name>
  <version>0.0.0</version>
  <description>The ridgeback_kinova_bringup package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>kinova_driver</depend>
  <depend>topic_tools</depend>

  <test_depend>roslaunch</test_depend>
</package>
