<?xml version="1.0"?>
<package format="2">
  <name>ridgeback_kinova_description</name>
  <version>0.0.0</version>
  <description>The ridgeback_kinova_description package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>kinova_description</depend>
  <depend>ridgeback_description</depend>

  <test_depend>roslaunch</test_depend>
</package>
