<?xml version="1.0"?>
<package format="2">
  <name>ridgeback_manipulation</name>
  <version>0.0.0</version>
  <description>The ridgeback_manipulation package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>ridgeback_kinova_bringup</depend>
  <depend>ridgeback_kinova_description</depend>

  <test_depend>roslaunch</test_depend>
</package>
